[package]
name = "typven"
version = "0.0.0"
edition = "2021"
authors = ["jimvdl <jimvdlind@gmail.com>"]
description = "A command-line interface for vendoring local Typst packages."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.72"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
comfy-table = "7"
dirs = "5"
fs_extra = "1.3"
open = "5"
semver = { version = "1", features = ["serde"] }
serde = { version = ">= 1.0.145, <= 1.0.171", features = ["derive"] }
toml = "0.7"
ureq = { version = "2.6", features = ["json"] }
walkdir = "2"