[package]
name = "typven"
version = "0.2.0"
edition = "2021"
authors = ["jimvdl <jimvdlind@gmail.com>"]
description = "A command-line interface for vendoring local Typst packages."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.72"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
comfy-table = "7"
dirs = "5"
fs_extra = "1.3"
git-url-parse = "0.4"
open = "5"
self-replace = { git = "https://github.com/jimvdl/self-replace", optional = true }
semver = { version = "1", features = ["serde"] }
serde = { version = ">= 1.0.145, <= 1.0.171", features = ["derive"] }
tar = { version = "0.4", optional = true }
tempfile = "3.7.0"
toml = "0.7"
ureq = { version = "2.6", features = ["json"] }
url = "2"
walkdir = "2"
xz2 = { version = "0.1", optional = true }
zip = { version = "0.6", optional = true }

[features]
default = []

# Permits the CLI to update itself without a package manager
self-update = ["dep:self-replace", "dep:xz2", "dep:zip", "dep:tar", "ureq/json"]